# A_Voznesensky_SNA

./: .gitignore  README.md  pyproject.toml
A_Voznesensky SNA/: SNA-EDGES-AV.xlsx  SNA-EDGES_wAV.xlsx  SNA-NODES-AV.xlsx  SNA-NODES_wAV.xlsx  SNA-data-without_AV.xlsx  SNA-data_wAV2.xlsx  SNA_data_wAV.xlsx
